--- a/src/assets/scss/styles.scss
+++ b/src/assets/scss/styles.scss
@@ -99,6 +99,11 @@ h4{
   letter-spacing: -0.8px;
 }
 
+.page-promo{
+  min-height: 220px;
+  margin-bottom: 20px;
+}
+
 @media (min-width: 640px){
   .container {
       max-width: 640px;
